--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@testing-library/user-event": "^7.1.2",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
+    "react-canvas-grid": "^0.12.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "predeploy": "npm run build",    
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
