--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.3",
     "gh-pages": "^3.1.0",
-    "react": "^16.13.1",
+    "node-sass": "^4.14.1",
+    "react": "^16.14.0",
     "react-canvas-grid": "^0.12.0",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-dom": "^16.14.0",
+    "react-scripts": "3.4.3",
+    "reactstrap": "^8.6.0"
   },
   "scripts": {
     "predeploy": "npm run build",
