--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
+    "cors": "^2.8.5",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-canvas-grid": "^0.12.0",
     "react-dom": "^16.14.0",
-    "react-scripts": "3.4.3",
-    "reactstrap": "^8.6.0"
+    "react-mp3-player": "^0.8.2",
+    "react-scripts": "^3.4.4",
+    "reactstrap": "^8.6.0",
+    "use-sound": "^1.0.2"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -38,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "file-loader": "^6.1.1"
   }
 }
